はよ完成させろ

--- a/css/style.css
+++ b/css/style.css
@@ -124,3 +124,9 @@ label {
 	margin-left: 10px;
 	color: red;
 }
+
+.comment .date {
+	font-weight: lighter;
+	color: gray;
+	font: small-caption;
+}
