--- a/css/style.css
+++ b/css/style.css
@@ -62,40 +62,6 @@ a.profile .account {
 	background-color: #ECECFF;
 }
 
-.message-icon {
-	border-bottom-style: ridge;
-	margin-top: 5px;
-	margin-right: 5px;
-	margin-bottom: 5px;
-	margin-left: 5px;
-	height: 80px;
-}
-
-.message-icon .icon {
-	margin-top: 1px;
-	margin-right: 1px;
-	margin-bottom: 1px;
-	margin-left: 1px;
-	float: left;
-}
-
-.message-icon .text {
-	height: 40px;
-}
-
-.message-icon .message {
-	margin-left: 60px;
-}
-
-.message-icon .account-name {
-	margin-top: 1px;
-	margin-bottom: 5px;
-}
-
-.message-icon .account-name .account {
-	font-weight: bold;
-}
-
 .account-name .name {
 	font-weight: lighter;
 	color: gray;
@@ -117,6 +83,11 @@ label {
 	display: block;
 }
 
+.search-block label {
+	display: inline;
+}
+
+
 .errorMessages {
 	margin-top: 10px;
 	margin-right: 10px;
@@ -129,4 +100,13 @@ label {
 	font-weight: lighter;
 	color: gray;
 	font: small-caption;
+}
+
+.refine {
+	display: inline;
+}
+
+message .title {
+	padding: .25em 0 .25em .75em;
+	border-left: 6px solid #ccc;
 }
