--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .tweet-box {
-	width: 780px;
+	width: 793px;
 	height: 56px;
 }
 
@@ -60,6 +60,7 @@ a.profile .account {
 	margin-bottom: 00px;
 	margin-left: 00px;
 	background-color: #ECECFF;
+
 }
 
 .account-name .name {
@@ -106,7 +107,32 @@ label {
 	display: inline;
 }
 
-message .title {
-	padding: .25em 0 .25em .75em;
-	border-left: 6px solid #ccc;
+.table {
+	border-collapse: collapse;
+	text-align: left;
+	line-height: 1.5;
 }
+
+.table  table td {
+	padding: 10px;
+}
+
+.table table th {
+	text-align: center;
+}
+
+.messages .message .title {
+	padding: .25em 0 .5em .75em;
+	border-left: 6px solid #ccc;
+	border-bottom: 1px solid #ccc;
+}
+
+.title {
+	width: 640px;
+}
+
+.messages .text {
+   word-wrap:break-word;
+}
+
+
